# reth2030

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  index.html  ralph.sh
.github/workflows/: ci.yml
code/: README.md
crates/reth2030/: Cargo.toml
crates/reth2030-core/: Cargo.toml
crates/reth2030-core/src/: config.rs  execution.rs  lib.rs  state.rs
crates/reth2030-core/tests/: architecture_notes_contract.rs  architecture_notes_seed_contract.rs  block_execution_pipeline_seed_contract.rs  ci_workflow_contract.rs  conformance_history_contract.rs  conformance_metric_seed_contract.rs  contributor_docs_contract.rs  crate_api_docs_contract.rs  engine_api_namespace_seed_contract.rs  execution_determinism_seed_contract.rs  execution_engine_seed_contract.rs  execution_ordering.rs  execution_ordering_seed_contract.rs  minimal_executable_block_flow_seed_contract.rs  minimal_state_test_subset_seed_contract.rs  mock_sync_seed_contract.rs  peer_lifecycle_observability_seed_contract.rs  public_vector_ci_seed_contract.rs  reth2030_net_seed_contract.rs  reth2030_rpc_seed_contract.rs  (+6 more)
crates/reth2030-net/: Cargo.toml
crates/reth2030-rpc/: Cargo.toml
crates/reth2030-rpc/src/: lib.rs
crates/reth2030-types/: Cargo.toml
crates/reth2030-vectors/: Cargo.toml
crates/reth2030-vectors/src/: main.rs
crates/reth2030/src/: main.rs
docs/: conformance.md
docs/architecture-notes/: ADR-0001-initial-workspace-and-poc-scope.md
vectors/baseline/: conformance-history.json  scorecard.json  snapshot.json
(+9 files in other folders)
