[package]
name = "reth2030-rpc"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC and Engine API skeleton for reth2030"
license = "MIT"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.2"
