[package]
name = "reth2030-vectors"
version = "0.1.0"
edition = "2021"
description = "Fixture harness and conformance scorecard tooling for reth2030"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reth2030-core = { path = "../reth2030-core" }
reth2030-types = { path = "../reth2030-types" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
